# claude-code-voice-handler

./: .env.example  .gitignore  CONTROL_PANEL.md  README.md  VOICE_CONTROL.md  claude.md  config.json  hook_entry.py  launcher.py  message_generator.py  pyproject.toml  queue_status.py  qwen_context.py  reload_voice.ps1  session_voice.py  setup_alias.sh  speech_lock.py  toggle_voice.ps1  tts_provider.py  voice.cmd  voice_handler.py  voice_hook.py
src/voice_handler/: __init__.py  __main__.py  cli.py  config.py  config_schema.py
src/voice_handler/ai/: __init__.py  prompts.py  qwen.py
src/voice_handler/api/: __init__.py  server.py
src/voice_handler/core/: __init__.py  handler.py  session.py  state.py
src/voice_handler/core/processors/: __init__.py  base.py  notification.py  post_tool_use.py  pre_tool_use.py  registry.py  session_start.py  stop.py  user_prompt_submit.py
src/voice_handler/dev/: __init__.py  reloader.py
src/voice_handler/queue/: __init__.py  broker.py  consumer.py  daemon.py  producer.py
src/voice_handler/tts/: __init__.py  base.py  openai_provider.py  provider.py  provider_factory.py  system_provider.py
src/voice_handler/utils/: __init__.py  dedup.py  lock.py  logger.py  paths.py  text.py  transcript.py
tests/: __init__.py  conftest.py  test_ai.py  test_config_integration.py  test_config_schema.py  test_e2e.py  test_queue.py  test_utils.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  main.jsx
web/src/api/: client.js
web/src/components/: ConfigEditor.jsx  Dashboard.jsx  HookManager.jsx  QueueViewer.jsx  TTSTester.jsx
